--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Components\CPUPart.cs" />
     <Compile Include="Components\Part.cs" />
+    <Compile Include="Components\StoragePart.cs" />
     <Compile Include="CustomBuildPage.xaml.cs">
       <DependentUpon>CustomBuildPage.xaml</DependentUpon>
     </Compile>
