--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -99,6 +99,7 @@
     <Compile Include="BrowsePage.xaml.cs">
       <DependentUpon>BrowsePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Components\CasePart.cs" />
     <Compile Include="Components\CoolingPart.cs" />
     <Compile Include="Components\CPUPart.cs" />
     <Compile Include="Components\GPUPart.cs" />
