Added PSU Class

--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Components\CPUPart.cs" />
     <Compile Include="Components\GPUPart.cs" />
     <Compile Include="Components\Part.cs" />
+    <Compile Include="Components\PSUPart.cs" />
     <Compile Include="Components\StoragePart.cs" />
     <Compile Include="CustomBuildPage.xaml.cs">
       <DependentUpon>CustomBuildPage.xaml</DependentUpon>
