--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Components\GPUPart.cs" />
     <Compile Include="Components\MotherboardPart.cs" />
     <Compile Include="Components\Part.cs" />
+    <Compile Include="Components\RAMPart.cs" />
     <Compile Include="Components\StoragePart.cs" />
     <Compile Include="CustomBuildPage.xaml.cs">
       <DependentUpon>CustomBuildPage.xaml</DependentUpon>
