Added Build Class, the fun has begun

--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppCore\Build.cs" />
     <Compile Include="AppCore\Warehouse.cs" />
     <Compile Include="BrowsePage.xaml.cs">
       <DependentUpon>BrowsePage.xaml</DependentUpon>
