--- a/ThePCdb/ThePCdb.csproj
+++ b/ThePCdb/ThePCdb.csproj
@@ -118,6 +118,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PartInfo.xaml.cs">
+      <DependentUpon>PartInfo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecommedBuildPage.xaml.cs">
       <DependentUpon>RecommedBuildPage.xaml</DependentUpon>
@@ -167,6 +170,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="PartInfo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RecommedBuildPage.xaml">
       <SubType>Designer</SubType>
